--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,9 @@
 {
-    "name": "hfcorriez/ini",
+    "name": "codegun/ini",
+    "type": "library",
     "description": "Ini Parser and Builder for PHP",
+    "keywords": ["ini"],
+    "license": "MIT",
     "authors": [
         {
             "name": "Corrie Zhao",
@@ -8,6 +11,12 @@
         }
     ],
     "require": {
-
-    }
+        "php": ">=5.3.0"
+    },
+    "autoload": {
+        "psr-0": {
+            "CodeGun\\Util\\Ini": "."
+        }
+    },
+    "target-dir": "CodeGun/Util/CronTab"
 }
