--- a/composer.json
+++ b/composer.json
@@ -19,5 +19,10 @@
         }
     },
     "target-dir": "CodeGun/Util/Ini",
-    "minimum-stability": "dev"
+    "minimum-stability": "dev",
+    "extra": {
+        "branch-alias": {
+            "dev-master": "0.1-dev"
+        }
+    }
 }
